--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -154,4 +154,12 @@ textarea::-moz-placeholder{color:$col-9}
 	}
 }
 
+.g-back-box{
+	overflow: hidden;
+	&>image{
+		width: 100%;
+		height: 100%;
+	}
+}
+
 
