新建  帖子详情页

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -14,7 +14,7 @@ $col-f:#fff;
 $col-blue:#426CC5;
 $col-blue1:#EAF2F8;
 $col-red :#FF4340;
-$col-red1:#FF6869;
+$col-red1:#ED7788;
 $col-ori:#F57629;
 $col-yell:#FFC000;
 $col-yell2:#F7F5B7;
